[tool.poetry]
name = "tiroirs"
version = "0.1.0"
description = ""
authors = ["Bruno Thomas <bruno@barreverte.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
